# kaleido-test-contract-apis

./: Cargo.toml  README.md  justfile
data/: kaleidoerc20mb.swagger.json  u0bpii6ir3.swagger.json  u0ff6ziwba.swagger.json  u0hkte1rqe.swagger.json  u0i7e09use.swagger.json  u0jzbvvw76.swagger.json  u0sek73vdz.swagger.json  u0ta9zm0up.swagger.json  u0vtfbfnvz.swagger.json  u0zh4okck0.swagger.json  u0zvk4trgb.swagger.json
scripts/: rustfmt.toml
scripts/build_api/: append-agent-basic-auth.txt  append-cargo-base64.txt  build.sh  match-agent.txt  match-cargo.txt
src/: lib.rs
