[package]
name = "kaleido-contract-apis"
version = "0.1.0"
edition = "2021"

[dependencies]
knox_token_api = { path = "./gen/knox_token_api" }
knox_htlc_api = { path = "./gen/knox_htlc_api" }
wb_amm = { path = "./gen/wb_amm" }
wb_htlc_erc20 = { path = "./gen/wb_htlc_erc20" }
wb_payment_init = { path = "./gen/wb_payment_init" }
wb_uae_cbproxy_api = { path = "./gen/wb_uae_cbproxy_api" }
wb_xaed_token_api = { path = "./gen/wb_xaed_token_api" }
